--- a/404.html
+++ b/404.html
@@ -17,8 +17,9 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1>Sorry! :( </h1>
+  <p>
+    The requested page is under construction.<br>
+    <a href='http://yalinli2.github.io/webpage/'>Return</a> to the homepage.
+  </p>
 </div>
