--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: 404
   <h1>Sorry! :( </h1>
   <p>
     The requested page is under construction.<br>
-    <a href='http://yalinli2.github.io/webpage/'>Return</a> to the homepage.
+    Return to the <a href='/index/'>homepage</a> .
   </p>
 </div>
