--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: 404
   <h1>Sorry! :( </h1>
   <p>
     The requested page is under construction.<br>
-    Return to the <a href='/index/'>homepage</a> .
+    Return to the <a href=''>homepage</a> .
   </p>
 </div>
