--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@ layout: 404
 <div class="container">
   <h1>Sorry! :( </h1>
   <p>
-    The requested page is under construction.<br>
-    Return to the <a href=''>homepage</a> .
+    The requested page does not exist or is under construction.<br>
+    Return to the <a href=site.baseurl>homepage</a> .
   </p>
 </div>
