--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: 404
   <h1>Sorry! :( </h1>
   <p>
     The requested page does not exist or is under construction.<br>
-    Return to the <a href=site.baseurl>homepage</a> .
+    Return to the <a href="{{site.baseurl}}">homepage</a> .
   </p>
 </div>
